--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<p>Hello, how are you?</p>
+<h1>Hello, how are you?</h1>
 <p>DO YOU WANT TO KNOW WHO AM I?</p>
 
 <a href ="aboutme.html">About Me</a>
