--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<h1>Hello, how are you?</h1>
-<p>DO YOU WANT TO KNOW WHO AM I?</p>
+<h1>WELCOME TO MY HOME PAGE</h1>
+<p>How are you?</p>
+<p>Hi, I'm Mary-Ann Gillego Salazar?</p>
 
 <a href ="aboutme.html">About Me</a>
