--- a/aboutme.html
+++ b/aboutme.html
@@ -1,5 +1,9 @@
 <h1> ABOUT ME</h1>
 <p>
-  Hi, I'm Mary-Ann Gillego Salazar. 21 years of age from Catanauan, Province of Quezon. <
-  br>
+  Hi, I'm Mary-Ann Gillego Salazar. First year Psychology student from National University - Dasmarinas. <br>
+  I'm 21 years of age and I came from Catanauan, Province of Quezon. <br>
+   
+<h1> Do you want to know me more? </h1> <p/>
+  
+  
   
