--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <h1>WELCOME TO MY HOME PAGE</h1>
 <p>How are you?</p>
-<p>Hi, I'm Mary-Ann Gillego Salazar</p>
+<p>Do you want to know me more?</p>
 
 <a href ="aboutme.html">About Me</a>
