--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-<h1>WELCOME TO MY HOME PAGE</h1>
-<p>How are you?</p>
-<p>Do you want to know me more?</p>
+<h1>WELCOME TO MY PAGE</h1>
+<br>Home</br>
 
-<a href ="aboutme.html">About Me</a>
+<li><a href ="aboutme.html">About Me</a><li>
+ 
