--- a/aboutme.html
+++ b/aboutme.html
@@ -2,8 +2,10 @@
 <p>
   Hi, I'm Mary-Ann Gillego Salazar. First year Psychology student from National University - Dasmarinas. <br>
   I'm 21 years of age and I came from Catanauan, Province of Quezon. <br>
-   
-<h1> Do you want to know me more? </h1> <p/>
+   <img src="https://www.instagram.com/p/CXEIQ0TvNva/"height="200">
+  
+  <li> <a href="educational.html">Educational Background<?a> </li>
+<p/>
   
   
   
